[gd_scene load_steps=18 format=2]

[ext_resource path="res://ressources/Ship_anim/ship_repair/repair.png" type="Texture" id=1]
[ext_resource path="res://ressources/Ship_anim/ship_repair/CockpitBreakdown/cockit2.png" type="Texture" id=2]
[ext_resource path="res://ressources/Ship_anim/ship_repair/CockpitBreakdown/cockit1.png" type="Texture" id=3]
[ext_resource path="res://ressources/Ship_anim/ship_repair/TurretBreakdown/turret1.png" type="Texture" id=4]
[ext_resource path="res://ressources/Ship_anim/ship_repair/TurretBreakdown/turret.png" type="Texture" id=5]
[ext_resource path="res://ressources/Ship_anim/ship_repair/EngineBreakdown/engine2.png" type="Texture" id=6]
[ext_resource path="res://ressources/Ship_anim/ship_repair/EngineBreakdown/engine1.png" type="Texture" id=7]
[ext_resource path="res://ressources/Ship_anim/ship_repair/LeftThrusterBreakdown/LThruster2.png" type="Texture" id=8]
[ext_resource path="res://ressources/Ship_anim/ship_repair/LeftThrusterBreakdown/LThruster1.png" type="Texture" id=9]
[ext_resource path="res://ressources/Ship_anim/ship_repair/RightThrusterBreakdown/RThruster2.png" type="Texture" id=10]
[ext_resource path="res://ressources/Ship_anim/ship_repair/RightThrusterBreakdown/RThruster1.png" type="Texture" id=11]
[ext_resource path="res://scenes/scripts/RepairUI.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="RepairUI" type="Sprite"]
visible = false
scale = Vector2( 0.2, 0.2 )
z_index = 10
texture = ExtResource( 1 )
script = ExtResource( 12 )

[node name="Cockpit" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 163, -206 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Turret" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -233, -63 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Engine" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 105, 186 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="LThruster" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -246, 147 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="RThruster" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 327, 107 )
frames = SubResource( 5 )
playing = true

[node name="CockpitButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 112.422
margin_top = -217.597
margin_right = 214.422
margin_bottom = -194.597
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RThrusterButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 231.0
margin_top = 95.0
margin_right = 425.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngineButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 60.0
margin_top = 175.0
margin_right = 152.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LThrusterButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -341.0
margin_top = 135.0
margin_right = -151.0
margin_bottom = 158.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurretButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -281.0
margin_top = -76.0
margin_right = -182.0
margin_bottom = -53.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CockpitButton" to="." method="_on_CockpitButton_pressed"]
[connection signal="pressed" from="RThrusterButton" to="." method="_on_RThrusterButton_pressed"]
[connection signal="pressed" from="EngineButton" to="." method="_on_EngineButton_pressed"]
[connection signal="pressed" from="LThrusterButton" to="." method="_on_LThrusterButton_pressed"]
[connection signal="pressed" from="TurretButton" to="." method="_on_TurretButton_pressed"]
